# mavlink-foxglove

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
layouts/: ardupilot-log-viewer.json  px4-flight-review.json
mavlink_foxglove/: __init__.py  __main__.py  bridge.py  channels.py  config.py  derived.py  dialect.py  encoding.py  schema.py  source.py
tests/: test_derived.py  test_encoding.py  test_integration.py  test_schema.py
tools/: mavlink_test_publisher.py  smoke_test.py
tools/layouts/: _builder.py  ardupilot_log_viewer.py  px4_flight_review.py
